@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-07-24T16:14:52Z",
+  "timestamp" : "2023-07-25T08:14:49Z",
   "count_outdated" : 147,
   "uniques_outdated" : 122,
-  "count" : 154,
-  "uniques" : 129,
+  "count" : 155,
+  "uniques" : 130,
   "clones" : [
     {
       "timestamp": "2023-07-11T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
+      "count_decinc": [ 1, 2 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2023-07-13T00:00:00Z",
@@ -52,6 +52,15 @@
     },
     {
       "timestamp": "2023-07-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-25T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
