@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2023-07-11T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2023-07-13T00:00:00Z",
@@ -29,6 +29,11 @@
     },
     {
       "timestamp": "2023-07-21T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-25T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
